--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -16,4 +16,5 @@ test:
 
 # set these environment variables on your prod server
 production:
-  uri: datajam_production
+  <<: *defaults
+  database: datajam_production
